@@ -1,7 +1,7 @@
 Name: harbour-fuoten
 Summary: ownCloud/Nextcloud News App Client
-Version: 0.7.1
-Release: 2
+Version: 0.8.0
+Release: 1
 # The contents of the Group field should be one of the groups listed here:
 # http://gitorious.org/meego-developer-tools/spectacle/blobs/master/data/GROUPS
 Group: Applications/Internet
